--- a/scss/common.scss
+++ b/scss/common.scss
@@ -1,48 +1,6 @@
 @charset "utf-8";
 
 
-header{
-    width:100%; height:80px;
-    margin:0 auto;
-    >h1.logo {
-        float:left;
-        margin:25px 20px 25px 40px;
-    }
-    >.serchBox{
-        float:left;
-        height:30px;
-        border-left:solid 1px #e6e6e6;
-        margin-top:25px;
-        input {  
-            border:none; 
-            margin-top:5px; margin-left:20px;
-            font-size:1.4rem;
-            width:250px;
-            &::placeholder { color:#d6d6d6;}
-            &:-ms-input-placeholder { /* Internet Explorer 10-11 */
-                color:#d6d6d6;
-            }   
-            &::-ms-input-placeholder { /* Microsoft Edge */
-                color:#d6d6d6;
-            }
-            
-        }
-    }
-    >nav.gnb {
-        float:right;
-        margin:20px 0;
-        > ul > li {
-            display:inline-block;
-            vertical-align: middle;
-            margin-right:30px;
-            font-size:1.4rem;
-            img { vertical-align:middle;}
-            .profileImg{ margin-right:10px;}
-            &:last-child{ margin-right:40px;}
-        }
-    }
-
-}
 
 /* 기본스타일 */
 
@@ -53,4 +11,145 @@ header{
 .textLeft { text-align:left;}
 .textRight { text-align:right;}
 
+
+//
+// 미디어 쿼리 MIXIN
+// --------------------------------------------------
+ 
+// Break Point (Desktop First 기준 내림차순 설정)
+$desktop-l-width	: 1440px;
+$tablet-l-width		: 1024px;
+$tablet-s-width		: 768px;
+$mob-l-width		: 640px;
+$mob-m-width		: 425px;
+$mob-s-width		: 375px;
+ 
+// only PC
+@mixin pc-only {
+	@media screen and (min-width: #{$tablet-l-width + 1}) {
+		@content;
+	}
+}
+// PC large
+@mixin pc-large {
+	@media screen and (min-width: #{$desktop-l-width + 1}) {
+		@content;
+	}
+}
+ 
+// --------------------------------------------------
+ 
+// 태블릿
+@mixin tab {
+	@media screen and (max-width: #{$tablet-l-width}) {
+		@content;
+	}
+}
+// 모바일
+@mixin mob {
+	@media screen and (max-width: #{$tablet-s-width}) {
+		@content;
+	}
+}
+// 모바일 large
+@mixin mob-large {
+	@media screen and (max-width: #{$mob-l-width}) {
+		@content;
+	}
+}
+// 모바일 mid
+@mixin mob-mid {
+	@media screen and (max-width: #{$mob-m-width}) {
+		@content;
+	}
+}
+// 모바일 small
+@mixin mob-small {
+	@media screen and (max-width: #{$mob-s-width}) {
+		@content;
+	}
+}
+
+
+
+
+header{
+    width:100%; height:80px;
+    margin:0 auto;
+    background:#ffffff;
+    .headerWrap {
+        width:96%;
+        max-width:1840px;
+        min-width:1050px;
+        margin:0 auto;
+        >h1.logo {
+            float:left;
+            margin:25px 20px 20px 0;
+        }
+        >.serchBox{
+            float:left;
+            width:30%;
+            height:30px;
+            border-left:solid 1px #e6e6e6;
+            margin-top:25px;
+            input {  
+                border:none; 
+                margin-top:5px; margin-left:20px;
+                font-size:1.4rem;
+                width:100%;
+                &::placeholder { color:#d6d6d6;}
+                &:-ms-input-placeholder { /* Internet Explorer 10-11 */
+                    color:#d6d6d6;
+                }   
+                &::-ms-input-placeholder { /* Microsoft Edge */
+                    color:#d6d6d6;
+                }
+                
+            }
+        }
+        >nav.gnb {
+            float:right;
+            margin:20px 0;
+            > ul > li {
+                display:inline-block;
+                vertical-align: middle;
+                margin-right:30px;
+                font-size:1.4rem;
+                img { vertical-align:middle;}
+                .profileImg{ margin-right:10px;}
+                &:last-child{ margin-right:0px;}
+                &.mobileMenu{ display:none;}
+            }
+        }
+    
+    }
+
+}
+
+/*******************************************************************
+	* 반응형 
+*******************************************************************/
+@include tab{
+	header{
+        .headerWrap{
+            width:94%;
+            max-width: 1024px;
+            min-width:320px;
+            margin:0 auto;
+            nav.gnb{
+                ul > li {
+                    display:none;
+                    &.mobileMenu {
+                        display:inline-block;
+                        margin-right:20px;
+                    }
+                    &:last-child {
+                        display:inline-block;
+                    }
+                }
+            }
+        }
+		
+	}
+}
 
