--- a/scss/detail.scss
+++ b/scss/detail.scss
@@ -1,10 +1,10 @@
 @charset "utf-8";
-@import url("reset.css");
-@import url("common.css");
+@import "reset.scss";
+@import "common.scss";
 
 
 /*******************************************************************
-	* 디테일비주얼 
+	* 디테일비주얼
 *******************************************************************/
 .mainVisual {
     width:100%;
@@ -24,7 +24,11 @@
                 > div { float: left;}
                 > .imgBox { 
                     width:300px; margin-right:30px;
-                    img { vertical-align: top;}
+                    img { 
+                        display:inline-block;
+                        vertical-align: top;
+                        &.mbImg { display:none;}
+                    }
                 }
                 > .textBox {
                     > ul > li {
@@ -540,6 +544,82 @@
                 }
             }
             
+        }
+    }
+}
+
+/*******************************************************************
+	* 테블릿 반응형
+*******************************************************************/
+
+@include tab{
+    .mainVisual {
+        height:1120px;
+        .visualContents{
+            .visualContentsWrap{
+                width:90%;
+                .contentBox{
+                    width:100%;
+                    top:150px;
+                    .imgBox{
+                        width:100%;
+                        img{ 
+                            width:100%;
+                            margin-bottom:15px;
+                            height:730px;
+                            &.mbImg { display:block;}
+                            &.pcImg { display:none;}
+                        }
+                    }
+                    .textBox{
+                        width:100%;
+                        font-size:1.2rem;
+                        > p {
+                            font-size:1.2rem;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .contents{
+        .contentsWrap{
+            width:100%;
+            .rightBox{
+                width:90%;
+                float:none;
+                margin:0 auto;
+                .courseRank  { display:none;}
+                .goodText { display:none;}
+            }
+            .fieldinfoBox{
+                width:90%;
+                float:none;
+                margin:0 auto;
+            }
+            .commentBox{
+                width:90%;
+                float:none;
+                margin:9px auto;
+            }
+            .commentView {
+                width:90%;
+                margin:0 auto;
+                float:none;
+                .proComment { width:100%; float:none;}
+                .normalComment { display:none;}
+                .allSee { width:100%;}
+            }
+            .reardBox {
+                width:90%;
+                margin:0 auto;
+                .regardList{
+                    >li .regardMovieText {
+                        width:60%;
+                    }
+                }
+            }
         }
     }
 }
