--- a/css/detail.css
+++ b/css/detail.css
@@ -208,6 +208,54 @@ header .headerWrap > nav.gnb > ul > li.mobileMenu {
 }
 
 /*******************************************************************
+	* 슬라이드 페이져버튼 
+*******************************************************************/
+/* Dots */
+.slick-dots {
+  position: absolute;
+  top: 15px;
+  right: 25px;
+  width: auto;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-align: center;
+}
+
+.slick-dots li {
+  position: relative;
+  display: inline-block;
+  margin: 0 5px;
+  padding: 0;
+  cursor: pointer;
+}
+
+.slick-dots li button {
+  font-size: 0;
+  line-height: 0;
+  display: block;
+  width: 10px;
+  height: 10px;
+  cursor: pointer;
+  background: #ece2e3;
+  border-radius: 50%;
+  border: 0;
+  outline: none;
+}
+
+.slick-dots li.slick-active button {
+  width: 20px;
+  background: #fff;
+  border-radius: 15px;
+}
+
+.slick-dots li button:hover {
+  width: 20px;
+  background: #fff;
+  border-radius: 15px;
+}
+
+/*******************************************************************
 	* 디테일비주얼
 *******************************************************************/
 .mainVisual {
